# jarvis

./: .env.example  .gitignore  EXE_BUILD.md  Jarvis_презентация.pptx  LICENSE  Makefile  README.md  README_GUI.md  _build_pptx.js  build_exe.bat  build_gui.bat  build_installer.bat  build_linux.sh  installer.iss  jarvis.spec  jarvis_gui.spec  mcp_servers.json  presentation.html  pyproject.toml  requirements.txt  requirements_gui.txt  setup.bat  sign_exe.ps1  Запустить_Jarvis.bat  Разрешить_телефон_в_брандмауэре.bat
.github/workflows/: ci.yml  release.yml
docs/: ROADMAP.md  TESTING.md
mobile/: .gitignore  README.md  capacitor.config.json  package-lock.json  package.json  sync-web.js
plugins/call_analyzer/: README.md  manifest.json  skill.py
plugins/image_gen/: README.md  manifest.json  skill.py
plugins/invoice_processor/: README.md  manifest.json  skill.py
plugins/jarvis_kb/: about_jarvis.md  manifest.json
plugins/nda_analyzer/: README.md  manifest.json  skill.py
plugins/vision/: README.md  manifest.json  skill.py
plugins/weather/: README.md  manifest.json  skill.py
plugins/websearch/: README.md  manifest.json  skill.py
plugins/wikipedia/: README.md  manifest.json  skill.py
src/jarvis/: __init__.py  bootstrap.py  console.py  main.py
src/jarvis/core/: config.py  docs.py  logging_setup.py  types.py  updater.py
src/jarvis/executor/: app_tools.py  comm_tools.py  file_tools.py  input_tools.py  memory_tools.py  plan_tools.py  rag_tools.py  registry.py  safety.py
tests/: conftest.py  test_agent_core.py  test_db.py  test_file_tools.py  test_registry.py
(+42 files in other folders)
